Fix splash screen animation flicker.

--- a/data/css/welcome.css
+++ b/data/css/welcome.css
@@ -16,7 +16,7 @@
 
 html {
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 html, body {
@@ -682,7 +682,7 @@ blockquote.terminal {
 }
 
 .splashLogo {
-  top: 200px;
+  top: 142px;
 }
 
 .splashVersion {
